--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -40,9 +40,9 @@
           </select>
           <br>
 
-          <label>男性</label><input type="radio" name=""gender>
-          <label>女性</label><input type="radio" name=""gender>
-          <label>その他</label><input type="radio" name=""gender>
+          <label>男性</label><input type="radio" name="gender">
+          <label>女性</label><input type="radio" name="gender">
+          <label>その他</label><input type="radio" name="gender">
           <br>
 
           <label>おすすめ和菓子の名称</label>
